# mlx-ollama-pilot

./: .gitignore  CHANGELOG.md  README.md  changelog.md  changelog_users.md
.claude/skills/code-reviewer/: SKILL.md
.claude/skills/git-worktree-manager/: SKILL.md
.claude/skills/repo-onboarding/: SKILL.md
.claude/skills/session-orchestrator/: SKILL.md
.claude/skills/test-fixer/: SKILL.md
apps/desktop-ui/: README.md  package.json
apps/desktop-ui/e2e/: agent-control-plane.test.js  agent-workspace-ui.test.js  channels-smoke.test.js
crates/agent-core/: Cargo.toml
crates/agent-skills/: Cargo.toml
crates/agent-tools/: Cargo.toml
crates/agent-tools/src/: checkpoints.rs  lib.rs  scheduler.rs  types.rs
crates/agent-tools/src/tools/: edit_file.rs  exec.rs  glob.rs  grep.rs  mod.rs  write_file.rs
docs/: agent-tool-parity.md  agent_architecture.md  hermes-inspired-runtime.md  llm-ecosystem-assimilation-2026-04-18.md  local-runtime-doctor.md  mlx-pilot-review-2026-04-18.md  release-gate-report.json  runtime-hardening-cycle-2026-04-18.md  skills-validation-report.md  video-scripts-ptbr.md
examples/: unified_e2e.ts
frontend-new/: app.js  index.html  styles.css
frontend-new/src-tauri/: Cargo.toml  tauri.conf.json
frontend-new/src-tauri/src/: main.rs
providers/unified_adapter/: anthropic_messages.ts  helpers.ts  index.ts  llamacpp.ts  mlx.ts  ollama.ts  openai_chat.ts  router.ts  tool_runtime.ts  types.ts  unified_adapter.test.ts
scripts/: mlx_airllm_bridge.py  run-desktop.sh  skills-smoke.mjs  stop-daemon.sh
scripts/release-gate/: _lib.mjs
(+48 files in other folders)
