[package]
name = "mlx-pilot-orbital"
version = "0.1.0"
edition = "2021"

[workspace]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
mlx-ollama-daemon = { path = "../../crates/daemon" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
